Made root block device name and boot cmdline configurable.

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -12,3 +12,4 @@ BBFILE_PRIORITY_meta-microservicebus-intel-nuc = "6"
 LAYERDEPENDS_meta-microservicebus-intel-nuc = "core"
 LAYERSERIES_COMPAT_meta-microservicebus-intel-nuc = "kirkstone"
 
+ROOT_BLOCK_DEVICE_NAME ?= "nvme0n1"
