--- a/recipes-core/rauc/files/intel-corei7-64/system.conf
+++ b/recipes-core/rauc/files/intel-corei7-64/system.conf
@@ -8,11 +8,11 @@ statusfile=/data/rauc.status
 path=ca.cert.pem
 
 [slot.rootfs.0]
-device=/dev/nvme0n1p2
+device=/dev/@ROOT_BLOCK_DEVICE_NAME@p2
 type=ext4
 bootname=A
 
 [slot.rootfs.1]
-device=/dev/nvme0n1p3
+device=/dev/@ROOT_BLOCK_DEVICE_NAME@p3
 type=ext4
 bootname=B
