Added parameter to configure compatible bundle declared in system.conf

--- a/recipes-core/rauc/files/intel-corei7-64/system.conf
+++ b/recipes-core/rauc/files/intel-corei7-64/system.conf
@@ -1,5 +1,5 @@
 [system]
-compatible=intel-i7-x64-nuc-msb-rauc
+compatible=@MSB_BUNDLE_COMPATIBLE@
 bootloader=grub
 grubenv=/grubenv/grubenv
 statusfile=/data/rauc.status
