--- a/recipes-bsp/grub/files/grub.cfg
+++ b/recipes-bsp/grub/files/grub.cfg
@@ -42,12 +42,13 @@ save_env --file=(hd0,1)/grubenv A_TRY A_OK B_TRY B_OK ORDER
 
 # For more logs add "loglevel=7" to CMDLINE
 CMDLINE="@BOOT_CMDLINE@"
+ROOT_BLOCK_DEVICE_NAME="@ROOT_BLOCK_DEVICE_NAME@"
 
 menuentry "Slot A (OK=$A_OK TRY=$A_TRY)" {
-    linux (hd0,2)/boot/bzImage root=/dev/@ROOT_BLOCK_DEVICE_NAME@p2 $CMDLINE rauc.slot=A
+    linux (hd0,2)/boot/bzImage root=/dev/${ROOT_BLOCK_DEVICE_NAME}p2 $CMDLINE rauc.slot=A
 }
 
 menuentry "Slot B (OK=$B_OK TRY=$B_TRY)" {
-    linux (hd0,3)/boot/bzImage root=/dev/@ROOT_BLOCK_DEVICE_NAME@p3 $CMDLINE rauc.slot=B
+    linux (hd0,3)/boot/bzImage root=/dev/${ROOT_BLOCK_DEVICE_NAME}p3 $CMDLINE rauc.slot=B
 }
 
