Renaming BOOT_CMDLINE into GRUB_RAUC_BOOT_CMD

--- a/recipes-bsp/grub/files/grub.cfg
+++ b/recipes-bsp/grub/files/grub.cfg
@@ -41,7 +41,7 @@ fi
 save_env --file=(hd0,1)/grubenv A_TRY A_OK B_TRY B_OK ORDER
 
 # For more logs add "loglevel=7" to CMDLINE
-CMDLINE="@BOOT_CMDLINE@"
+CMDLINE="@GRUB_RAUC_BOOT_CMD@"
 ROOT_BLOCK_DEVICE_NAME="@ROOT_BLOCK_DEVICE_NAME@"
 
 menuentry "Slot A (OK=$A_OK TRY=$A_TRY)" {
